--- a/package.json
+++ b/package.json
@@ -16,12 +16,17 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
+    "aws-amplify": "^6.0.6",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "chart.js": "^3.0.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
